# project-smart-ob

./: .gitignore  CMakeLists.txt  README.md
data/: sample_L2.txt  sample_L3.txt  sample_trades.txt
include/: Callbacks.hpp  DataStructures.hpp  L2Book.hpp  L3Book.hpp  MarketDataIngestor.hpp  OrderBook.hpp  TradeContainer.hpp  Types.hpp
src/: Callbacks.cpp  L2Book.cpp  L3Book.cpp  MarketDataIngestor.cpp  OrderBook.cpp  TradeContainer.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
